<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainScreen">

    <ImageView
        android:id="@+id/main_screen_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/main_screen_background"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/main_screen_background" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="344dp"
        android:layout_height="69dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/main_screen_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/singlePlayerButton"
        android:layout_width="204dp"
        android:layout_height="49dp"
        android:layout_marginStart="266dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="261dp"
        android:layout_marginBottom="238dp"
        android:background="@color/buttonColor"
        android:onClick="pressSinglePlayerButton"
        android:text="@string/single_player_button"
        android:textColor="@color/buttonTextColor"
        app:layout_constraintBottom_toBottomOf="@+id/main_screen_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/multiPlayerButton"
        android:layout_width="203dp"
        android:layout_height="47dp"
        android:layout_marginStart="265dp"
        android:layout_marginEnd="263dp"
        android:background="@color/buttonColor"
        android:onClick="pressMultiPlayerButton"
        android:text="@string/multi_player_button"
        android:textColor="@color/buttonTextColor"
        app:layout_constraintBottom_toTopOf="@+id/quickplaybutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singlePlayerButton" />

    <Button
        android:id="@+id/quickplaybutton"
        android:layout_width="203dp"
        android:layout_height="47dp"
        android:layout_marginStart="265dp"
        android:layout_marginTop="264dp"
        android:layout_marginEnd="263dp"
        android:layout_marginBottom="100dp"
        android:background="@color/buttonColor"
        android:onClick="quickPlay"
        android:text="Quickplay"
        android:textColor="@color/buttonTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/pigMainScreen"
        android:layout_width="147dp"
        android:layout_height="172dp"
        android:contentDescription="@string/pig"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/main_screen_background"
        app:layout_constraintHorizontal_bias="0.37"
        app:layout_constraintStart_toEndOf="@+id/multiPlayerButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.895"
        app:srcCompat="@drawable/pig" />

    <Button
        android:id="@+id/button7"
        android:layout_width="135dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="311dp"
        android:layout_marginEnd="580dp"
        android:layout_marginBottom="51dp"
        android:background="@color/buttonColor"
        android:onClick="instructions"
        android:text="Instructions"
        android:textColor="@color/buttonTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>